# learning_google_adk

./: .gitignore  README.md  list_models.py  main.py  markdown.css  pyproject.toml  requirements.txt
01-basic-agent/greeting_agent/: agent.py
adk_tutorial/: readme.md
adk_tutorial/agent_team/: agents.py  agents_config.yaml  tools.py  utils.py
adk_tutorial/multi_tool_agent/: agent.py
brandon/04-structured-output/: main.py
brandon/05-sessions-and-state/: main.py
brandon/08-multi-agent-with-state/: main.py  utils.py
brandon/adk_masterclass/: readme.md
brandon/adk_with_mcp/: calc.py  readme.md
google/: .01-day-trip-genie.py.swp  .utils.py.swp  00-basic-agent-no-tools.py  00-basic-agent.py  01-agent-with-internal-tools.py  01-day-trip-genie.py  02-agent-with-custom-tools.py  02-weather-agent.py  03-agent-as-a-tool.py  04-agent-with-memory.py  05-router-agent.py  agents_config.yaml  deploy_multiagent_systems_with_adk.md  readme,md  readme.md  utils.py
google/adk_crash_course/: 00-basic-agent-no-tools.cache  00-basic-agent-no-tools.py  01-agent-with-internal-tools.py  02-agent-with-custom-tools.py  03-agent-as-a-tool.py  04-agent-with-memory.py  05-router-agent.py  06-sequential-agent.py  07-loop-agent.py  10-agent-with-structured-output.py  agents_config.yaml  readme.md  tools.py  utils.py
google/adk_tutorial/: readme.md
google/adk_tutorial_medium/: readme.md
google/intro_to_adk/: 00-build_and_deploy_agents_with_the_adk.md  03-craft_agents_with_persistent_memory.md  readme.md  (+6 more)
projects/: .env.example  README.md  app.py  main.py  requirements.txt
projects/retail_investment_research_copilot/: .env.example  ALL_FILES.md  README.md  blog.md  main.py  pyproject.toml  streamlit_app.py
projects/retail_investment_research_copilot/agents/common/: __init__.py  models.py  runtime.py
projects/retail_investment_research_copilot/agents/market_data_service/: agent.py  models.py  runtime.py  service_app.py  tools.py
projects/retail_investment_research_copilot/agents/memo_service/: agent.py  models.py  runtime.py  service_app.py
projects/retail_investment_research_copilot/agents/news_service/: agent.py  runtime.py  service_app.py  tools.py
projects/retail_investment_research_copilot/sample_inputs/: demo_request.json
projects/retail_investment_research_copilot/scripts/: start_services.py
(+190 files in other folders)
