[project]
name = "learning-google-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk[extensions]>=1.24.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-weather>=2.1.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "streamlit>=1.54.0",
    "yfinance>=1.1.0",
]
